--- a/res/layout/dialog_set_protect_password.xml
+++ b/res/layout/dialog_set_protect_password.xml
@@ -26,7 +26,7 @@
         android:id="@+id/et_protect_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:inputType="numberPassword"
         android:hint="请输入保护密码"
         />
     
@@ -34,7 +34,7 @@
         android:id="@+id/et_confirm_protect_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:inputType="numberPassword"
         android:hint="请再次输入保护密码"
         />
     
