--- a/res/layout/activity_lost_find.xml
+++ b/res/layout/activity_lost_find.xml
@@ -48,6 +48,7 @@
             android:text="防盗保护是否开启" />
 
         <ImageView
+            android:id="@+id/iv_anti_thief_protect"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_alignParentRight="true"
