*对手机防盗设置页面的流程进行优化，设置的结果保存在临时变量中， 	只有进入到最后一步才会保存，而且按返回键中途设置的值不会保存

--- a/res/layout/activity_init_config_first.xml
+++ b/res/layout/activity_init_config_first.xml
@@ -85,7 +85,7 @@
             />
             
         <Button 
-            android:onClick="nextConfig"
+            android:id="@+id/button_next_config"
             android:text="下一步"
             style="@style/NextButtonStyle"
             />
