--- a/res/layout/activity_init_config_fourth.xml
+++ b/res/layout/activity_init_config_fourth.xml
@@ -14,7 +14,9 @@
         android:id="@+id/cb_set_anti_thief_protect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:text="设置是否开启防盗保护"
+        style="@style/CustomCheckboxTheme"
         />
     
     <LinearLayout 
@@ -62,15 +64,15 @@
             android:layout_centerInParent="true"
             android:src="@drawable/anti_thief_phone"
             />
-            
+                    
         <Button 
-            android:onClick="previousConfig"
+            android:id="@+id/button_previous_config"
             android:text="上一步"
             style="@style/PreviousButtonStyle"
             />
         
         <Button 
-            android:onClick="nextConfig"
+            android:id="@+id/button_next_config"
             android:text="完成"
             style="@style/NextButtonStyle"
             />
