--- a/res/layout/activity_lost_find.xml
+++ b/res/layout/activity_lost_find.xml
@@ -18,6 +18,33 @@
         <TextView
             style="@style/ContentStyle"
             android:layout_alignParentLeft="true"
+            android:text="是否绑定SIM卡" />
+
+        <TextView
+            android:id="@+id/tv_bind_sim_card_state"
+            style="@style/ContentStyle"
+            android:layout_alignParentRight="true"
+            android:text="已绑定" />
+    </RelativeLayout>
+
+    <View 
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:background="#C3D6F8"
+        />
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        >
+
+        <TextView
+            style="@style/ContentStyle"
+            android:layout_alignParentLeft="true"
             android:text="安全号码" />
 
         <TextView
@@ -45,17 +72,14 @@
         <TextView
             style="@style/ContentStyle"
             android:layout_alignParentLeft="true"
-            android:text="防盗保护是否开启" />
+            android:text="是否开启防盗保护" />
 
-        <ImageView
-            android:id="@+id/iv_anti_thief_protect"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+        <TextView
+            android:id="@+id/tv_anti_thief_protect_state"
+            style="@style/ContentStyle"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="8dp"
-            android:src="@drawable/lock"
-            android:scaleType="centerInside"
-            />
+            android:text="已开启" />
+        
     </RelativeLayout>
     
     <View 
@@ -66,25 +90,17 @@
         android:background="#C3D6F8"
         />
     
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        >
+	<TextView
+	    android:id="@+id/tv_lost_find_reconfig"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:clickable="true"
+	    android:background="@drawable/ui_light_green"
+	    android:text="重新进入设置向导" 
+	    android:textSize="16sp"
+	    android:padding="8dp"
+	    />
 
-        <TextView
-            android:id="@+id/tv_lost_find_reconfig"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"   
-            android:clickable="true"
-            android:onClick="reconfig"
-            android:background="@drawable/ui_light_green"
-            android:text="重新进入设置向导" 
-            android:textSize="16sp"
-            android:padding="8dp"
-            />
-
-    </RelativeLayout>
 
     <View 
         android:layout_width="match_parent"
