--- a/res/layout/activity_init_config_second.xml
+++ b/res/layout/activity_init_config_second.xml
@@ -29,7 +29,7 @@
         android:id="@+id/ci_init_config_bind_sim_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        itheima:config_item_title="设置是否绑定SIM卡"
+        itheima:config_item_title="绑定SIM卡"
         itheima:config_item_description="设置是否绑定SIM卡"
         >
         
