--- a/res/layout/activity_lost_find.xml
+++ b/res/layout/activity_lost_find.xml
@@ -61,6 +61,33 @@
         android:layout_marginRight="8dp"
         android:background="#C3D6F8"
         />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        >
+
+        <TextView
+            style="@style/ContentStyle"
+            android:layout_alignParentLeft="true"
+            android:text="是否开启超级管理权限" />
+
+        <TextView
+            android:id="@+id/tv_device_admin_state"
+            style="@style/ContentStyle"
+            android:layout_alignParentRight="true"
+            android:text="已开启" />
+        
+    </RelativeLayout>
+    
+    <View 
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:background="#C3D6F8"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -81,6 +108,7 @@
             android:text="已开启" />
         
     </RelativeLayout>
+    
     
     <View 
         android:layout_width="match_parent"
